--- a/chemistry.html
+++ b/chemistry.html
@@ -52,6 +52,7 @@
         }
       })();
     </script>
-    <img src="img/SI Units.jpg" alt="SI Units" id="SI" />
+    <img id="SI" src="img/SI Units.png" alt="SI Units" />
+    <img class="PTable" src="img/periodic-table.jpg" />
   </body>
 </html>
