--- a/index.html
+++ b/index.html
@@ -21,12 +21,31 @@
         });
       </script>
     </div>
-    <h2 id="things">Things we gotta do this week</h2>
-    <ul id="todolist">
-      <li>CHY102 Ch. 15 - 16 iClickers, DSM</li>
-      <li>MTH141 Quiz 6</li>
-      <li>MTH140 Quiz 6</li>
-    </ul>
+    <h2>Useful Links</h2>
+    <a
+      href="https://courses.ryerson.ca/d2l/le/content/411354/viewContent/3081763/View"
+      class="Links"
+      target="_blank"
+      >Mastering Chemistry</a
+    >
+    <a
+      href="https://docs.google.com/document/d/1_WWW-zZOYYV-8Q0JVxjuFjmKengTL8abQq11ujGuGVA/edit"
+      class="Links"
+      target="_blank"
+      >Link to All Resources</a
+    >
+    <a href="https://www.webassign.net/" class="Links" target="_blank"
+      >Webassign</a
+    >
+
+    <style>
+      .Links {
+        margin-left: 25px;
+        display: inline-block;
+        font-size: 17px;
+      }
+    </style>
+
     <script>
       function retheme() {
         var cc = document.body.className;
