change id and way of rendering KaTeX

--- a/chemistry.html
+++ b/chemistry.html
@@ -53,6 +53,6 @@
       })();
     </script>
     <img id="SI" src="img/SI Units.png" alt="SI Units" />
-    <img class="PTable" src="img/periodic-table.jpg" />
+    <img id="PTable" src="img/periodic-table.jpg" />
   </body>
 </html>
