--- a/chemistry.html
+++ b/chemistry.html
@@ -53,6 +53,8 @@
       })();
     </script>
     <img id="SI" src="img/SI Units.png" alt="SI Units" />
-    <img id="PTable" src="img/periodic-table.jpg" />
+    <embed id="PTable" src="https://ptable.com/?lang=en#Properties" />
+    <img id="PTable2" src="img/Periodic-Table.jpg" />
+    <img id="PTable3" src="img/Periodic-Table2.jpg" />
   </body>
 </html>
