--- a/chemistry.html
+++ b/chemistry.html
@@ -54,7 +54,7 @@
     </script>
     <img id="SI" src="img/SI Units.png" alt="SI Units" />
     <embed id="PTable" src="https://ptable.com/?lang=en#Properties" />
-    <img id="PTable2" src="img/Periodic-Table.jpg" />
-    <img id="PTable3" src="img/Periodic-Table2.jpg" />
+    <img id="PTable2" src="img/Periodic-Table.png" alt="Table2" />
+    <img id="PTable3" src="img/Periodic-Table2.jpg" alt="Table3" />
   </body>
 </html>
