trig discontinuity explanation

--- a/calc.html
+++ b/calc.html
@@ -101,7 +101,7 @@
       \lim\limits_{x\rightarrow a}\sqrt[a]{x} = \sqrt[n]{a} \text{ Where n is a
       (+)ve int } \\ \hspace{20em}\text{(if n is even,
       assume}\lim\limits_{x\rightarrow a}f(x) > 0) \\ \text{} \\ 11.
-      \lim\limits_{x\rightarrow a} \sqrt[a]{f(x)} =
+      \lim\limits_{x\rightarrow a} \sqrt[n]{f(x)} =
       \sqrt[n]{\lim\limits_{x\rightarrow a}f(x)} \text{ where n is a (+)ve int}
       \\ \text{If n is even, assume }\lim\limits_{x\rightarrow a}f(x) > 0\)
     </p>
@@ -228,6 +228,16 @@
     </table>
 
     <hr width="auto" size="1" />
+
+    <p class="Middle" style="font-size: 17px">
+      \( \displaystyle \text{For the dumb:} \\ \text{} \\ \text{When }\sin x = 0
+      \Leftrightarrow x = k\pi \text{ (Where k is an integer)} \\ \text{} \\
+      \text{When }\cos x = 0 \Leftrightarrow x = \frac{\pi}{2} + k\pi \text{
+      Where k is an integer} \\ \text{} \\ \tan x = 0 \rightarrow \frac{\sin
+      x}{\cos x} = 0 \\ \text{tan x = 0 when cos x = 0} \\ \text{so... } \cos x
+      = 0 \Leftrightarrow x = \frac{\pi}{2} + k\pi \\ x = \frac{\pi}{2} + k\pi
+      \text{, } k \in \mathbb{Z}\)
+    </p>
 
     <style>
       .heading2 {
