add chain rule and more dumb things

--- a/calc.html
+++ b/calc.html
@@ -138,8 +138,10 @@
       \\ \text{} \\ \text{Difference Rule: }\frac{d}{dx}[f(x)-g(x)] =
       f'(x)-g'(x) \\ \text{} \\ \text{Product Rule: } \frac{d}{dx}[f(x)g(x)] =
       f'(x)g(x) + f(x)g'(x) \\ \text{} \\ \text{Quotient Rule: } \frac{d}{dx}
-      [\frac{f(x)}{g(x)}] = \frac{g(x)f'(x) - f(x)g'(x)}{[g(x)]^2}\\ \text{} \\
-      \)
+      \Big[\frac{f(x)}{g(x)}\Big] = \frac{g(x)f'(x) - f(x)g'(x)}{[g(x)]^2}\\
+      \text{} \\ \text{Chain Rule: }\frac{d}{dx}f(x) = f'(g(x))g'(x) \\ \text{
+      where f(x) is the outer function and g(x) is the inner function} \\
+      \text{} \\ \)
     </p>
 
     <hr width="auto" size="1" />
@@ -236,7 +238,9 @@
       Where k is an integer} \\ \text{} \\ \tan x = 0 \rightarrow \frac{\sin
       x}{\cos x} = 0 \\ \text{tan x = 0 when cos x = 0} \\ \text{so... } \cos x
       = 0 \Leftrightarrow x = \frac{\pi}{2} + k\pi \\ x = \frac{\pi}{2} + k\pi
-      \text{, } k \in \mathbb{Z}\)
+      \text{, } k \in \mathbb{Z} \\ \text{} \\ \text{Revenue function R(x) =
+      price (p) }\times \text{ demand (x)} \\ \text{Marginal revenue function =
+      R'(x) (derivative of revenue)} \\ \text{} \\ \)
     </p>
 
     <style>
