--- a/calc.html
+++ b/calc.html
@@ -139,7 +139,8 @@
       f'(x)-g'(x) \\ \text{} \\ \text{Product Rule: } \frac{d}{dx}[f(x)g(x)] =
       f'(x)g(x) + f(x)g'(x) \\ \text{} \\ \text{Quotient Rule: } \frac{d}{dx}
       \Big[\frac{f(x)}{g(x)}\Big] = \frac{g(x)f'(x) - f(x)g'(x)}{[g(x)]^2}\\
-      \text{} \\ \text{Chain Rule: }\frac{d}{dx}f(x) = f'(g(x))g'(x) \\ \text{
+      \text{} \\ \text{Chain Rule: }\frac{d}{dx}F'(x) = f'(g(x))g'(x) \\
+      \text{F(x) is the composite function defined by F(x) = f(g(x))} \\ \text{
       where f(x) is the outer function and g(x) is the inner function} \\
       \text{} \\ \)
     </p>
