fix summation propertities

--- a/calc.html
+++ b/calc.html
@@ -112,7 +112,7 @@
     <p class="Middle" style="font-size: 17px">
       <u>Properties of Summation</u> \(\displaystyle \\ 1. \sum_{i=1}^n ka_i = k
       \sum_{i=1}^n a_i \\ \text{} \\ 2. \sum_{i=1}^{n} (a_i ± b_i) =
-      \sum_{i=1}^n a_i ± \sum_{i=1}^n \\ \text{} \\ \)
+      \sum_{i=1}^n a_i ± \sum_{i=1}^n b_i \\ \text{} \\ \)
       <u>Summation Formulas</u>\( \\ 1. \displaystyle\sum_{i=1}^n c = cn
       \hspace{8em} 2. \sum_{i=1}^n i = \frac{n(n+1)}{2} \\ \text{} \\ 3.
       \sum_{i=1}^n i^2 = \frac{n(n+1)(2n+1)}{6} \hspace{3em} 4. \sum_{i=1}^n
