add more log derivatives

--- a/calc.html
+++ b/calc.html
@@ -195,9 +195,11 @@
           <!--Exponential/Log Derivatives-->
           \( \\ \text{} \\ \displaystyle \frac{d}{dx}c = 0 \\ \text{} \\
           \frac{d}{dx}x = 1 \\ \text{} \\ \frac{d}{dx} x^n = nx^{(n-1)} \\
-          \text{} \\ (e^x)' = e^x \\ \text{} \\ (a^x)' = a^x \ln a \\ \text{} \\
-          (\log_ax)' = \frac{1}{x \ln a} \\ \text{} \\ (\ln x)' = \frac{1}{x} \\
-          \text{} \\ \)
+          \text{} \\ \frac{d}{dx}[e^x] = e^x \\ \text{} \\ \frac{d}{dx}[a^x] =
+          a^x \ln a \\ \text{} \\ \frac{d}{dx}\log_ax = \frac{1}{x \ln a} \\
+          \text{} \\ \frac{d}{dx}\ln x = \frac{1}{x} \\ \text{} \\
+          \frac{d}{dx}\ln[f(x)]=\frac{1}{f(x)}f'(x) \\ \text{} \\
+          \frac{d}{dx}\log_a[f(x)]=\frac{1}{f(x)\ln a}f'(x) \\ \text{} \\ \)
         </td>
         <td>
           <!--Trig Derivatives-->
