Add More Riemann Sum Formulas

--- a/calc.html
+++ b/calc.html
@@ -110,13 +110,18 @@
 
     <h2 class="heading2">Summation</h2>
     <p class="Middle" style="font-size: 17px">
-      <u>Properties of Summation</u> \(\displaystyle \\ 1. \sum_{i=1}^n ka_i = k
+      <u>General Riemann Sum</u> \(\displaystyle \\ 1. \sum_{i=1}^n ka_i = k
       \sum_{i=1}^n a_i \\ \text{} \\ 2. \sum_{i=1}^{n} (a_i ± b_i) =
       \sum_{i=1}^n a_i ± \sum_{i=1}^n b_i \\ \text{} \\ \)
       <u>Summation Formulas</u>\( \\ 1. \displaystyle\sum_{i=1}^n c = cn
       \hspace{8em} 2. \sum_{i=1}^n i = \frac{n(n+1)}{2} \\ \text{} \\ 3.
       \sum_{i=1}^n i^2 = \frac{n(n+1)(2n+1)}{6} \hspace{3em} 4. \sum_{i=1}^n
-      i^3=\frac{n^2(n+1)^2}{4} \)
+      i^3=\frac{n^2(n+1)^2}{4} \\ \text{} \\\) <u>Endpoint Approximation</u>\(
+      \displaystyle \\ \Delta x = \frac{b - a}{n} \hspace{4em} x_k = a + k\Delta
+      x \\ \text{} \\ R_n = \sum_{k = 1}^n f(x_k)\Delta x \hspace{4em} L_n =
+      \sum_{k = 1}^n f(x_{i-1})\Delta x \\ \text{} \\ \text{Area }= \lim_{n
+      \rightarrow \infin}\sum_{k = 1}^n f(c_k)\Delta x,\hspace{1em} x_{i - 1} ≤
+      c_k ≤ x_k\)
     </p>
 
     <hr width="auto" size="1" />
