--- a/calc.html
+++ b/calc.html
@@ -121,7 +121,9 @@
       x \\ \text{} \\ R_n = \sum_{k = 1}^n f(x_k)\Delta x \hspace{4em} L_n =
       \sum_{k = 1}^n f(x_{i-1})\Delta x \\ \text{} \\ \text{Area }= \lim_{n
       \rightarrow \infin}\sum_{k = 1}^n f(c_k)\Delta x,\hspace{1em} x_{i - 1} ≤
-      c_k ≤ x_k\)
+      c_k ≤ x_k \\ \text{} \\ \text{Let f(x) be continuous over the interval [a,
+      b]. Then the average value of the function f(x) on [a, b] is given by} \\
+      f_{ave} = \frac{1}{b-a}\int_a^b f(x)dx\)
     </p>
 
     <hr width="auto" size="1" />
