I ain't getting sued

--- a/calc.html
+++ b/calc.html
@@ -296,5 +296,9 @@
         }
       })();
     </script>
+    <hr width="auto" size="1" />
+    <footer>
+      <p>This is intended only be used for practicing problems</p>
+    </footer>
   </body>
 </html>
