add integrals, trig identities

--- a/calc.html
+++ b/calc.html
@@ -120,7 +120,7 @@
       \displaystyle \\ \Delta x = \frac{b - a}{n} \hspace{4em} x_k = a + k\Delta
       x \\ \text{} \\ R_n = \sum_{k = 1}^n f(x_k)\Delta x \hspace{4em} L_n =
       \sum_{k = 1}^n f(x_{i-1})\Delta x \\ \text{} \\ \text{Area }= \lim_{n
-      \rightarrow \infin}\sum_{k = 1}^n f(c_k)\Delta x,\hspace{1em} x_{i - 1} ≤
+      \rightarrow \infty}\sum_{k = 1}^n f(c_k)\Delta x,\hspace{1em} x_{i - 1} ≤
       c_k ≤ x_k \\ \text{} \\ \text{Let f(x) be continuous over the interval [a,
       b]. Then the average value of the function f(x) on [a, b] is given by} \\
       f_{ave} = \frac{1}{b-a}\int_a^b f(x)dx\)
@@ -171,7 +171,13 @@
           \text{} \\ \int \sec^2x \space dx = \tan x + C \\ \text{} \\ \int \sec
           x \tan x \space dx = \sec x + C \\ \text{} \\ \int \csc^2x \space dx =
           -\cot x + C \\ \text{} \\ \int \csc x \cot x \space dx = -\csc x + C
-          \\ \text{} \\ \)
+          \\ \text{} \\ \int \frac{1}{\sqrt{a^2-x^2}}dx = \sin ^-1
+          \Big(\frac{x}{a}\Big) + C \\ \text{} \\ \int \frac{1}{a^2 + x^2}dx =
+          \frac{1}{a} \tan ^-1 \Big(\frac{x}{a}\Big) + C \\ \text{} \\ \int e^x
+          dx = e^x + C \\ \text{} \\ \int a^x dx = \frac{1}{\ln a}a^x + C \\
+          \text{} \\ \int \frac{1}{x}dx = \ln x + C \\ \text{} \\ \int \ln x dx
+          = x\ln x - x + C \\ \text{} \\ \int \log_a xdx = \frac{1}{\ln a}(x\ln
+          x - x) + C \\ \text{} \\ \)
         </td>
         <td>
           <!--Differtiation Formula-->
