--- a/linalg.html
+++ b/linalg.html
@@ -64,6 +64,11 @@
       </script>
     </div>
 
+    <img id="UnitCircle" src="img/unit circle.jpg" alt="Circle" />
+    <img id="TrigId" src="img/Trigonometric_Identities.jpg" alt="TrigId1" />
+    <img id="TrigId2" src="img/Trigonometric_Identities_2.png" alt="TrigId2" />
+    <img id="Stolen" src="img/Stolen.png" alt="Stolen1" />
+
     <script>
       function retheme() {
         var cc = document.body.className;
